# RCurl

./: CRAN_changes  Changes.html  DESCRIPTION  FAQ.html  MD5  NAMESPACE  README.windows  Todo.html  base64.R  configure  configure.ac  configure.in  configure.win  getURL.html  gmon.out  ii  itis.R  oo  postForm.html  postFormEg.R  preserve.R  preserve.c  proxy  r_packets.tcp  testForm1.pl  tickets.tcp  trends  url.exists.R
CodeGeneration/: enum.c.001t.tu  enum.c.tu  foo.html  generate.R  tmp
R/: aclassesEnums.R  binary.S  classes.S  curl.S  dynamic.R  form.S  getURLContent.R  header.R  mime.R  options.S  upload.R  urlExists.R  xbits.R
a.out.dSYM/Contents/Resources/DWARF/: a.out
data/: mimeTypeExtensions.rda
inst/CurlSSL/: logfile
inst/doc/: RCurl.tex  fileUploads.html  myarticle.xsl  philosophy.html  philosophy.xml
inst/enums/: Renums.c  enums.R
inst/examples/: concurrent.html
man/: CFILE.Rd  CURLHandle-class.Rd  CurlFeatureBits.Rd  HTTP_VERSION_1_0.Rd  MultiCURLHandle-class.Rd  base64.Rd  basicHeaderGatherer.Rd  basicTextGatherer.Rd  binaryBuffer.Rd  chunkToLineReader.Rd  complete.Rd  curlEscape.Rd  curlGlobalInit.Rd  curlOptions.Rd  curlPerform.Rd  curlSetOpt.Rd  curlVersion.Rd  dynCurlReader.Rd  enums.Rd  fileUpload.Rd  ftpUpload.Rd  getBinaryURL.Rd  getBitIndicators.Rd  getCurlHandle.Rd  getCurlInfo.Rd  getFormParams.Rd  getURIAsynchronous.Rd  getURL.Rd  guessMIMEType.Rd  merge.list.Rd  mimeTypeExtensions.Rd  postForm.Rd  reset.Rd  scp.Rd  url.exists.Rd
src/: CURLINFOTable.h  CURLOptTable.h  CurlInfoEnums.h  CurlOptEnums.h  Makevars  Makevars.in  Makevars.ucrt  Makevars.win  Rcurl.h  base64.c  curl.E  curl.c  curl.c-expt  curlInit.c  curl_base64.c  json.c  memoryManagement.c  myUTF8.c
tests/: jpeg.R  passwd.S  soap.S  worm.S
